overflow fix

--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,5 +1,6 @@
 html,body{
     margin: 0;
+    overflow: hidden;
 }
 .desktop-login-main-container {
     width: 80vw;
@@ -294,14 +295,10 @@ ___________________________________________ */
 /* Last Media Quert fot Mobiles */
 /* __________________________________________ */
 @media screen and (max-width:492px) {
-#root{
-    align-content: normal;
-    /* justify-content: ; */
-}
 .desktop-login-main-container{
     margin-top: 30px;
-    justify-self: start;
     width: 100%;
+    height: 70%;
 }
 .login-right-subcontainer{
     width: 90%;
