--- a/src/Signup/Signup.css
+++ b/src/Signup/Signup.css
@@ -1,6 +1,7 @@
 html,
 body {
     margin: 0;
+    overflow: hidden;
 }
 
 .signup-desktop-main-div {
@@ -303,13 +304,14 @@ ___________________________________________ */
 /* Last Media Quert fot Mobiles */
 /* __________________________________________ */
 @media screen and (max-width:492px) {
-#root {
-    align-content: normal;
-}
 .signup-desktop-main-div {
     margin-top: 30px;
     justify-self: start;
     width: 100%;
+    height: 70%;
+}
+.signup-desktop-name-div{
+    height: 120px;
 }
 .signup-desktop-right-div {
     width: 90%;
